fixed alignment

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -141,6 +141,7 @@ body, html {
     word-wrap: break-word;
     text-align: center;
     letter-spacing: 20px;
+    padding-left: 20px;
 }
 
 .dash {
